<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/back2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/backgrnd2"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="275dp"
        android:layout_height="390dp"
        android:background="@drawable/button_shape"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="175dp"
            android:layout_height="118dp"
            android:layout_gravity="center"
            android:contentDescription="@string/todo3"
            app:srcCompat="@drawable/logo1"
            tools:ignore="ImageContrastCheck" />

        <Button
            android:id="@+id/SignInwithEmail"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/btnrash"
            android:drawableEnd="@drawable/blackemail"
            android:fontFamily="@font/cairo"
            android:gravity="center"
            android:paddingEnd="33dp"
            android:text="@string/sign_in_via"
            android:textColor="@color/Black"
            android:textSize="13sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText,RtlSymmetry,DuplicateSpeakableTextCheck,TouchTargetSizeCheck,TextContrastCheck" />

        <Button
            android:id="@+id/SignInwithPhone"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/btnrash"
            android:drawableEnd="@drawable/blackphone"
            android:fontFamily="@font/cairo"
            android:gravity="center"
            android:paddingEnd="33dp"
            android:text="@string/sign_in_via2"
            android:textColor="@color/Black"
            android:textSize="13sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry,TouchTargetSizeCheck" />

        <Button
            android:id="@+id/SignUp"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/btnrash"
            android:fontFamily="@font/cairo"
            android:gravity="center"
            android:text="@string/signup"
            android:textColor="@color/Black"
            android:textSize="13sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText,TouchTargetSizeCheck" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>