<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgrnd2"
    tools:context=".Pickersendotp">

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="280dp"
        android:layout_height="400dp"
        android:background="@drawable/btnrash"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearlayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/background_shape"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/cairo"
                android:text="@string/enter_otp"
                android:textColor="@color/defaultColor"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="15dp"
                android:hint="@string/Otp"
                android:ems="10"
                android:id="@+id/PSOcode"/>

            <Button
                android:id="@+id/PSOVerify"
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="5dp"
                android:drawablePadding="-20dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/btnrash"
                android:text="@string/verify"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/defaultColor"
                android:fontFamily="@font/cairo"/>

            <TableRow
                android:id="@+id/rash3"
                android:layout_width="200dp"
                android:layout_height="3dp"
                android:layout_marginStart="11dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/btnrash"/>

            <Button
                android:id="@+id/PSOResendotp"
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="26dp"
                android:background="@drawable/btnrash"
                android:drawablePadding="-20dp"
                android:fontFamily="@font/cairo"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/resend_otp"
                android:textColor="@color/defaultColor"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/PSOtext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/resend_code_within_57s"
                android:textAlignment="center"
                android:textColor="@color/gray"
                android:textSize="11sp"
                tools:ignore="TextContrastCheck" />


        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>